testsuite/tests/typecheck/should_fail/T9260.stderr

T9260.hs:12:14: error:
    • Couldn't match type ‘1’ with ‘0’
      Expected: Fin 0
        Actual: Fin (0 + 1)
    • In the first argument of ‘Fsucc’, namely ‘Fzero’
      In the expression: Fsucc Fzero
      In an equation for ‘test’: test = Fsucc Fzero
